--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,6 +104,18 @@
         app:layout_constraintTop_toBottomOf="@+id/launchWalletButton" />
 
     <Button
+        android:id="@+id/passkeysSignUpButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="10dp"
+        android:text="@string/passkey_signup"
+        android:textAllCaps="false"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signMsgButton" />
+
+    <Button
         android:id="@+id/signResultButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
