--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     tools:context="com.web3auth.app.MainActivity">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/verifierList"
+        android:id="@+id/authConnectionList"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -39,7 +39,7 @@
         android:backgroundTint="@color/black"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/verifierList" />
+        app:layout_constraintTop_toBottomOf="@id/authConnectionList" />
 
 
     <TextView
